tests/files/type_checker_tests/should_fail/198.cmdr
//Should fail import if file does not type check
import "10.cmdr";
